# apiclient/models/param_update_achievement_points_request.go
@@ -1,0 +1,81 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// ParamUpdateAchievementPointsRequest param update achievement points request
+//
+// swagger:model param.UpdateAchievementPointsRequest
+type ParamUpdateAchievementPointsRequest struct {
+
+	// comment
+	// Example: Updated based on feedback
+	Comment string `json:"comment,omitempty"`
+
+	// points
+	// Example: 8
+	// Required: true
+	// Minimum: 0
+	Points *int64 `json:"points"`
+}
+
+// Validate validates this param update achievement points request
+func (m *ParamUpdateAchievementPointsRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validatePoints(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ParamUpdateAchievementPointsRequest) validatePoints(formats strfmt.Registry) error {
+
+	if err := validate.Required("points", "body", m.Points); err != nil {
+		return err
+	}
+
+	if err := validate.MinimumInt("points", "body", *m.Points, 0, false); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this param update achievement points request based on context it is used
+func (m *ParamUpdateAchievementPointsRequest) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ParamUpdateAchievementPointsRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ParamUpdateAchievementPointsRequest) UnmarshalBinary(b []byte) error {
+	var res ParamUpdateAchievementPointsRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
